--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -43,6 +43,9 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
+      - name: Install PostCSS
+        run: |
+          npm install -g postcss-cli autoprefixer
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v4
