--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://www.adrianmoreno.info"
+baseURL = "https://hantianzhao.info"
 languageCode = "en-us"
 theme = "adritian-free-hugo-theme"
 
