--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -2,7 +2,7 @@
 showcase:
   enable: true
   title: "Hello, I’m Han Tianzhao."
-  subtitle: "Front-End Developer"
+  subtitle: "Back-End Developer"
   description: "This is a good place to start with an introduction about yourself. Maybe a mention to the place <a target='_blank' href='https://www.adrianmoreno.info/'>where you work</a>. You can also mention where you live, your background and what's the purpose of the site. <br>You can download this theme from <a target='_blank' href='https://github.com/zetxek/adritian-free-hugo-theme'>github</a>."
   image:
     x: "images/showcase/showcase.png"
